server.log
nohup: ignoring input
2026-01-28 01:34:47 [warning  ] Redis connection failed: Error -3 connecting to redis:6379. Temporary failure in name resolution.. Caching will be disabled.
Traceback (most recent call last):
  File "/home/gol-d-roger/onetech/Farm -Management -Main frontend /Uzhathunai_Farming_Platform-_OneAim--Backend/./venv/bin/uvicorn", line 9, in <module>
    sys.exit(main())
             ~~~~^^
  File "/home/gol-d-roger/onetech/Farm -Management -Main frontend /Uzhathunai_Farming_Platform-_OneAim--Backend/venv/lib/python3.13/site-packages/click/core.py", line 1485, in __call__
    return self.main(*args, **kwargs)
           ~~~~~~~~~^^^^^^^^^^^^^^^^^
  File "/home/gol-d-roger/onetech/Farm -Management -Main frontend /Uzhathunai_Farming_Platform-_OneAim--Backend/venv/lib/python3.13/site-packages/click/core.py", line 1406, in main
    rv = self.invoke(ctx)
  File "/home/gol-d-roger/onetech/Farm -Management -Main frontend /Uzhathunai_Farming_Platform-_OneAim--Backend/venv/lib/python3.13/site-packages/click/core.py", line 1269, in invoke
    return ctx.invoke(self.callback, **ctx.params)
           ~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/gol-d-roger/onetech/Farm -Management -Main frontend /Uzhathunai_Farming_Platform-_OneAim--Backend/venv/lib/python3.13/site-packages/click/core.py", line 824, in invoke
    return callback(*args, **kwargs)
  File "/home/gol-d-roger/onetech/Farm -Management -Main frontend /Uzhathunai_Farming_Platform-_OneAim--Backend/venv/lib/python3.13/site-packages/uvicorn/main.py", line 416, in main
    run(
    ~~~^
        app,
        ^^^^
    ...<45 lines>...
        h11_max_incomplete_event_size=h11_max_incomplete_event_size,
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "/home/gol-d-roger/onetech/Farm -Management -Main frontend /Uzhathunai_Farming_Platform-_OneAim--Backend/venv/lib/python3.13/site-packages/uvicorn/main.py", line 587, in run
    server.run()
    ~~~~~~~~~~^^
  File "/home/gol-d-roger/onetech/Farm -Management -Main frontend /Uzhathunai_Farming_Platform-_OneAim--Backend/venv/lib/python3.13/site-packages/uvicorn/server.py", line 61, in run
    return asyncio.run(self.serve(sockets=sockets))
           ~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.13/asyncio/runners.py", line 195, in run
    return runner.run(main)
           ~~~~~~~~~~^^^^^^
  File "/usr/lib/python3.13/asyncio/runners.py", line 118, in run
    return self._loop.run_until_complete(task)
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^
  File "uvloop/loop.pyx", line 1518, in uvloop.loop.Loop.run_until_complete
  File "/home/gol-d-roger/onetech/Farm -Management -Main frontend /Uzhathunai_Farming_Platform-_OneAim--Backend/venv/lib/python3.13/site-packages/uvicorn/server.py", line 68, in serve
    config.load()
    ~~~~~~~~~~~^^
  File "/home/gol-d-roger/onetech/Farm -Management -Main frontend /Uzhathunai_Farming_Platform-_OneAim--Backend/venv/lib/python3.13/site-packages/uvicorn/config.py", line 467, in load
    self.loaded_app = import_from_string(self.app)
                      ~~~~~~~~~~~~~~~~~~^^^^^^^^^^
  File "/home/gol-d-roger/onetech/Farm -Management -Main frontend /Uzhathunai_Farming_Platform-_OneAim--Backend/venv/lib/python3.13/site-packages/uvicorn/importer.py", line 21, in import_from_string
    module = importlib.import_module(module_str)
  File "/usr/lib/python3.13/importlib/__init__.py", line 88, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 1026, in exec_module
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/home/gol-d-roger/onetech/Farm -Management -Main frontend /Uzhathunai_Farming_Platform-_OneAim--Backend/app/main.py", line 291, in <module>
    from app.api.v1 import api_router
  File "/home/gol-d-roger/onetech/Farm -Management -Main frontend /Uzhathunai_Farming_Platform-_OneAim--Backend/app/api/v1/__init__.py", line 4, in <module>
    from app.api.v1 import (
    ...<31 lines>...
    )
  File "/home/gol-d-roger/onetech/Farm -Management -Main frontend /Uzhathunai_Farming_Platform-_OneAim--Backend/app/api/v1/schedule_templates.py", line 12, in <module>
    from app.services.schedule_template_service import ScheduleTemplateService
  File "/home/gol-d-roger/onetech/Farm -Management -Main frontend /Uzhathunai_Farming_Platform-_OneAim--Backend/app/services/schedule_template_service.py", line 523
    self.db.add(translation)
IndentationError: unexpected indent
